--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "express": "^4.17.1",
     "mysql2": "^2.3.1",
     "path": "^0.12.7",
+    "pino": "^7.0.2",
+    "pino-http": "^5.8.0",
     "sequelize": "^6.7.0",
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "pino-pretty": "^7.1.0"
   }
 }
